--- a/bower.json
+++ b/bower.json
@@ -27,9 +27,9 @@
     "bootstrap": "^3.3.6",
     "angular-bootstrap": "1.3.2",
     "ui-select": "angular-ui-select#0.16.1",
-    "ng-obiba": "https://github.com/obiba/ng-obiba.git#master"
+    "ng-obiba": "https://github.com/obiba/ng-obiba.git#1.4.3"
   },
   "dependencies": {
-    "obiba-country-codes": "https://github.com/obiba/obiba-country-codes.git"
+    "obiba-country-codes": "https://github.com/obiba/obiba-country-codes.git#1.0.0"
   }
 }
