--- a/bower.json
+++ b/bower.json
@@ -24,10 +24,10 @@
   "devDependencies": {
     "angular-schema-form": "^0.8.13",
     "angular-schema-form-bootstrap": "^0.2.0",
-    "bootstrap": "^3.3.6",
-    "angular-bootstrap": "1.3.2",
-    "ui-select": "angular-ui-select#0.16.1",
-    "ng-obiba": "https://github.com/obiba/ng-obiba.git#1.5.1"
+    "bootstrap": "^3.3.7",
+    "angular-bootstrap": "2.5.02",
+    "ui-select": "angular-ui-select#0.19.8",
+    "ng-obiba": "https://github.com/obiba/ng-obiba.git#master"
   },
   "dependencies": {
     "obiba-country-codes": "https://github.com/obiba/obiba-country-codes.git#1.0.1"
